<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notefrag">

    <Button
        android:id="@+id/button_5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/pill_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/five"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/notefrag"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/notefrag"
        app:layout_constraintTop_toTopOf="@id/notefrag"
        />

    <Button
        android:id="@+id/button_20"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/pill_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/twentytaka"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

   <Button
       android:id="@+id/button_100"
       android:layout_width="200dp"
       android:layout_height="40dp"
       android:layout_marginTop="32dp"
       android:background="@drawable/pill_bg"
       android:gravity="left|center_vertical"
       android:paddingLeft="15dp"
       android:text="@string/hundred"
       android:textAllCaps="false"
       android:textColor="@color/grey"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/button_20" />

</android.support.constraint.ConstraintLayout>