<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_frag">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="500px"
        android:layout_height="500px"
        android:layout_marginBottom="316dp"
        android:src="@drawable/logowhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_ar"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/pill_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/openar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_how"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/pill_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/lib"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_ar" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/pill_bg"
        android:gravity="left|center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_how" />



</android.support.constraint.ConstraintLayout>